welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:12: error: Boolean does not take parameters
		{
                ^